Archive2/68/5b3b1ee008f14c/output
main.cpp:4:65: error: 'constexpr' needed for in-class initialization of static data member 'const void* C::noop1' of non-integral type [-fpermissive]
     static const void* noop1 = reinterpret_cast<const void*>(0x1);
                                                                 ^
main.cpp:5:70: error: invalid static_cast from type 'int' to type 'const void*'
     static constexpr const void* noop2 = static_cast<const void*>(0x1);
                                                                      ^
